@@ -434,12 +434,19 @@ let simplify_lets lam =
   | Lapply(Lfunction{kind = Curried; params; body}, args, _)
     when optimize && List.length params = List.length args ->
       simplif (beta_reduce params body args)
-  | Lapply(Lfunction{kind = Tupled; params; body}, [Lprim(Pmakeblock _, args)], _)
+  | Lapply(Lfunction{kind = Tupled; params; body},
+           [Lprim(Pmakeblock _, args)], _)
     when optimize && List.length params = List.length args ->
       simplif (beta_reduce params body args)
   | Lapply(l1, ll, loc) -> Lapply(simplif l1, List.map simplif ll, loc)
   | Lfunction{kind; params; body = l} ->
-     Lfunction{kind; params; body = simplif l}
+      begin match simplif l with
+        Lfunction{kind=Curried; params=params'; body}
+        when kind = Curried && optimize ->
+          Lfunction{kind; params = params @ params'; body}
+      | body ->
+          Lfunction{kind; params; body}
+      end
   | Llet(str, v, Lvar w, l2) when optimize ->
       Hashtbl.add subst v (simplif (Lvar w));
       simplif l2
