@@ -108,6 +108,7 @@ Bug fixes:
 - PR#6752: Extensible variant types and scope escaping
 - PR#6808: the parsing of OCAMLRUNPARAM is too lax
   (Damien Doligez)
+- PR#6874: Inefficient code generated for module function arguments
 
 Features wishes:
 - PR#4714: List.cons
